--- a/ToDoList/app/src/main/res/layout/activity_registration_page.xml
+++ b/ToDoList/app/src/main/res/layout/activity_registration_page.xml
@@ -65,6 +65,7 @@
             tools:ignore="MissingConstraints">
 
             <EditText
+                android:id="@+id/Fullname"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:background="@android:color/transparent"
@@ -87,6 +88,7 @@
             tools:ignore="MissingConstraints">
 
             <EditText
+                android:id="@+id/Email"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:background="@android:color/transparent"
@@ -107,11 +109,13 @@
             tools:ignore="MissingConstraints">
 
             <EditText
+                android:id="@+id/Password"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:background="@android:color/transparent"
                 android:hint="Enter your password"
                 android:nestedScrollingEnabled="false"
+                android:password="true"
                 android:singleLine="false" />
         </LinearLayout>
         <LinearLayout
@@ -127,8 +131,10 @@
             tools:ignore="MissingConstraints">
 
             <EditText
+                android:id="@+id/Confirm_Password"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:password="true"
                 android:background="@android:color/transparent"
                 android:hint="Confirm your password"
                 android:nestedScrollingEnabled="false"
