--- a/ToDoList/app/src/main/res/layout/activity_sign_in_page.xml
+++ b/ToDoList/app/src/main/res/layout/activity_sign_in_page.xml
@@ -89,6 +89,7 @@
             tools:ignore="MissingConstraints">
 
             <EditText
+                android:id="@+id/Password"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:background="@android:color/transparent"
