--- a/ToDoList/app/src/main/res/layout/activity_user_page.xml
+++ b/ToDoList/app/src/main/res/layout/activity_user_page.xml
@@ -1,11 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/bacground_default_color"
+    android:orientation="vertical"
     tools:context=".UserPage">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -21,9 +24,9 @@
             android:background="@drawable/semi_circle" />
 
         <FrameLayout
-            android:layout_gravity="center"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
             android:layout_marginLeft="137dp"
             android:layout_marginTop="132dp"
             android:layout_marginRight="137dp"
@@ -34,24 +37,162 @@
                 android:layout_width="86dp"
                 android:layout_height="80dp"
                 android:layout_gravity="center"
-                android:clickable="true"
-                android:background="@drawable/for_image" />
+                android:background="@drawable/for_image"
+                android:clickable="true" />
 
         </FrameLayout>
     </LinearLayout>
+
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        >
-        <AnalogClock
-            android:layout_width="wrap_content"
+        android:layout_gravity="center"
+        android:orientation="horizontal">
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            tools:layout_editor_absoluteX="-20dp"
-            tools:layout_editor_absoluteY="238dp" />
+            android:layout_marginTop="9dp"
+            android:layout_weight="1"
+            android:gravity="center_horizontal">
+
+                <FrameLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:gravity="center">
+
+                    <ImageView
+                        android:id="@+id/clock_face"
+                        android:layout_gravity="center"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/clock_face" />
+
+                    <ImageView
+                        android:id="@+id/hour_hand"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/hour_hand"
+                        android:layout_gravity="center" />
+
+                    <ImageView
+                        android:id="@+id/minute_hand"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/minute_hand"
+                        android:layout_gravity="center" />
+
+                    <ImageView
+                        android:id="@+id/second_hand"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/second_hand"
+                        android:layout_gravity="center" />
+                </FrameLayout>
+
+
+
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="12dp"
+                android:layout_marginRight="33dp"
+                android:text="good afternoon"
+                android:textColor="@color/black"
+                android:textSize="9dp"
+                android:textStyle="bold"
+                app:layout_constraintEnd_toEndOf="parent"
+                tools:ignore="MissingConstraints"
+                tools:layout_editor_absoluteY="1dp" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
 
     </LinearLayout>
 
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="31dp"
+        android:layout_marginTop="51dp"
+
+        >
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Task list"
+            android:textColor="@color/black"
+            android:textSize="9dp"
+            android:textStyle="bold" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/LinLayout"
+        android:clickable="true"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginLeft="31dp"
+        android:layout_marginTop="9dp"
+        android:layout_marginRight="33dp"
+        android:background="@drawable/task_rectangle"
+        android:orientation="vertical">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <TextView
+
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="19dp"
+                android:layout_marginTop="9dp"
+                android:layout_weight="1"
+                android:text="Daily task"
+                android:textColor="@color/black"
+                android:textSize="12dp" />
+
+            <ImageButton
+                android:id="@+id/append_task"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:clickable="true"
+                android:layout_gravity="end"
+                android:layout_marginTop="7dp"
+                android:layout_marginRight="16dp"
+                android:background="@drawable/append_task" />
+
+        </LinearLayout>
+
+<!--        <LinearLayout-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_marginTop="17dp"-->
+<!--            android:orientation="horizontal"-->
+<!--            android:textAlignment="center">-->
+
+<!--            <CheckBox-->
+<!--                android:id="@+id/checkbox"-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:checked="false"-->
+<!--                android:contextClickable="false"-->
+<!--                android:textColorHint="#3DDAE4"-->
+<!--                android:textColorLink="#3DDAE4" />-->
+
+<!--            <TextView-->
+<!--                android:id="@+id/task"-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="match_parent"-->
+<!--                android:gravity="center"-->
+<!--                android:text="example task"-->
+<!--                android:textColor="@color/black"-->
+<!--                android:textSize="12dp"/>-->
+<!--        </LinearLayout>-->
+    </LinearLayout>
 
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
