--- a/ToDoList/app/src/main/res/layout/activity_user_page.xml
+++ b/ToDoList/app/src/main/res/layout/activity_user_page.xml
@@ -30,7 +30,7 @@
             android:layout_marginLeft="137dp"
             android:layout_marginTop="132dp"
             android:layout_marginRight="137dp"
-            android:layout_marginBottom="36dp">
+            android:layout_marginBottom="16dp">
 
             <ImageView
                 android:id="@+id/image_view"
@@ -39,8 +39,16 @@
                 android:layout_gravity="center"
                 android:background="@drawable/for_image"
                 android:clickable="true" />
-
         </FrameLayout>
+        <TextView
+            android:id="@+id/Welcome_Text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textStyle="bold"
+            android:textColor="@color/black"
+            android:text="Welcome"
+            android:layout_gravity="center"
+            android:layout_marginBottom="6dp"/>
     </LinearLayout>
 
     <LinearLayout
@@ -73,14 +81,17 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:src="@drawable/hour_hand"
-                        android:layout_gravity="center" />
+                        android:layout_gravity="center"
+                        android:layout_marginLeft="13dp"
+                        />
 
                     <ImageView
                         android:id="@+id/minute_hand"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:src="@drawable/minute_hand"
-                        android:layout_gravity="center" />
+                        android:layout_gravity="center"
+                        />
 
                     <ImageView
                         android:id="@+id/second_hand"
@@ -88,6 +99,11 @@
                         android:layout_height="wrap_content"
                         android:src="@drawable/second_hand"
                         android:layout_gravity="center" />
+
+                    <SeekBar
+                        android:id="@+id/seekBar"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content" />
                 </FrameLayout>
 
 
