--- a/ToDoList/app/src/main/res/drawable/hour_hand.xml
+++ b/ToDoList/app/src/main/res/drawable/hour_hand.xml
@@ -1,9 +1,10 @@
-<vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="26dp"
-    android:height="3dp"
-    android:viewportWidth="26"
-    android:viewportHeight="3">
-  <path
-      android:pathData="M0,0h26v3h-26z"
-      android:fillColor="#66B3AE"/>
-</vector>
+<?xml version="1.0" encoding="utf-8"?>
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="rectangle">
+    <solid android:color="#66B2AE" /> <!-- Set the color of the rectangle to black -->
+    <size
+        android:width="30dp"
+        android:height="3dp" />
+
+    <!-- Set the size of the rectangle -->
+</shape>
